@@ -5431,7 +5431,7 @@ function rcube_webmail()
 
     if (this.env.keep_alive && !this.env.framed && this.task == 'mail' && this.gui_objects.mailboxlist)
       this._int = setInterval(function(){ ref.check_for_recent(false); }, this.env.keep_alive * 1000);
-    else if (this.env.keep_alive && !this.env.framed && this.env.action != 'print')
+    else if (this.env.keep_alive && !this.env.framed && this.task != 'login' && this.env.action != 'print')
       this._int = setInterval(function(){ ref.send_keep_alive(); }, this.env.keep_alive * 1000);
   };
 
